# config/packages/nelmio_api_doc.yaml
@@ -22,10 +22,10 @@ nelmio_api_doc:
             - Bearer: []
 
         tags:
-            - name: Auth
-            - name: Tickets
-            - name: Comments
-            - name: Users
+           - name: !php/const App\OpenApi\Tags::AUTH
+           - name: !php/const App\OpenApi\Tags::TICKETS
+           - name: !php/const App\OpenApi\Tags::COMMENTS
+           - name: !php/const App\OpenApi\Tags::USERS
 
         paths:
             /api/login_check:
